--- a/android/app/src/main/assets/editor.html
+++ b/android/app/src/main/assets/editor.html
@@ -1663,8 +1663,8 @@
 			}
 
 			body {
-				padding-left:10px;
-				padding-right:10px;
+				/*padding-left:10px;
+				padding-right:10px;*/
 				padding-top: 0px;
 				padding-bottom: 0px;
 				overflow-y: scroll;
