--- a/android/app/src/main/assets/editor.html
+++ b/android/app/src/main/assets/editor.html
@@ -873,7 +873,7 @@
 				});
 			}
 
-			zss_editor.init = function() {
+                        zss_editor.init = function(options) {
 
 				disableLineBreakIfNecessary('zss_editor_title');
 				disableLineBreakIfNecessary('zss_editor_content');
@@ -917,11 +917,20 @@
 				whenPastingInsertAsPlainText('zss_editor_title');
 				whenPastingInsertAsPlainText('zss_editor_content');
 
-				zss_editor.focusTitle();
+                                if (options.hiddenTitle) {
+                                        zss_editor.hideTitle();
+                                        zss_editor.focusContent();
+                                } else {
+                                        zss_editor.focusTitle();
+                                }
 
 				setTimeout(function() {
 					WebViewBridge.send(JSON.stringify({type: 'ZSS_INITIALIZED'}))
 				}, 20);
+
+                                window.onerror = function (message, source, line, col, err) {
+                                        zss_editor.debug('Error: ' + message + '\n' + err.stack)
+                                }
 
 			}//end
 
@@ -1260,6 +1269,15 @@
 
 				zss_editor.enabledEditingItems();
 			}
+
+                        zss_editor.insertCustomHTML = function(data) {
+                                zss_editor.restorerange();
+                                var sel = document.getSelection();
+                                sel.deleteFromDocument();
+                                document.execCommand('insertHTML', false, data);
+
+                                zss_editor.enabledEditingItems();
+                        }
 
 			zss_editor.updateLink = function(url, title) {
 
