upgrade to remove deprecated proptypes

--- a/android/app/src/main/assets/editor.html
+++ b/android/app/src/main/assets/editor.html
@@ -1683,8 +1683,7 @@
 			}
 
 			body {
-				/*padding-left:10px;
-				padding-right:10px;*/
+				padding-right:20px;
 				padding-top: 0px;
 				padding-bottom: 0px;
 				overflow-y: scroll;
